nashorn/test/script/basic/JDK-8062141.js.EXPECTED
"?"
SyntaxError: Invalid JSON: <json>:1:4 Invalid hex digit
"\u0"
    ^
SyntaxError: Invalid JSON: <json>:1:4 Invalid hex digit
"\u0"
    ^
SyntaxError: Invalid JSON: <json>:1:5 Invalid hex digit
"\u00"
     ^
SyntaxError: Invalid JSON: <json>:1:6 Invalid hex digit
"\u003"
      ^
SyntaxError: Invalid JSON: <json>:1:6 Invalid hex digit
"\u003x"
      ^
SyntaxError: Invalid JSON: <json>:1:3 Missing close quote
"\"
   ^
SyntaxError: Invalid JSON: <json>:1:1 Missing close quote
"
 ^
SyntaxError: Invalid JSON: <json>:1:0 Expected json literal but found +
+1
^
-1
SyntaxError: Invalid JSON: <json>:1:2 Invalid JSON number format
1.
  ^
SyntaxError: Invalid JSON: <json>:1:0 Invalid JSON number format
.1
^
SyntaxError: Invalid JSON: <json>:1:1 Expected eof but found 1
01
 ^
SyntaxError: Invalid JSON: <json>:1:2 Invalid JSON number format
1e
  ^
1
SyntaxError: Invalid JSON: <json>:1:1 Expected eof but found a
1a
 ^
SyntaxError: Invalid JSON: <json>:1:3 Invalid JSON number format
1e+
   ^
SyntaxError: Invalid JSON: <json>:1:3 Invalid JSON number format
1e-
   ^
0
0
[]
[1]
SyntaxError: Invalid JSON: <json>:1:3 Trailing comma is not allowed in JSON
[1,]
   ^
[1,2]
SyntaxError: Invalid JSON: <json>:1:5 Expected , or ] but found eof
[1, 2
     ^
{}
{"a":"b"}
SyntaxError: Invalid JSON: <json>:1:12 Expected , or } but found eof
{ "a" : "b" 
            ^
SyntaxError: Invalid JSON: <json>:1:8 Expected json literal but found }
{ "a" : }
        ^
true
SyntaxError: Invalid JSON: <json>:1:0 Expected json literal but found ident
tru
^
SyntaxError: Invalid JSON: <json>:1:4 Expected eof but found 1
true1
    ^
false
SyntaxError: Invalid JSON: <json>:1:0 Expected json literal but found ident
fals
^
SyntaxError: Invalid JSON: <json>:1:5 Expected eof but found r
falser
     ^
null
SyntaxError: Invalid JSON: <json>:1:0 Expected json literal but found ident
nul
^
SyntaxError: Invalid JSON: <json>:1:4 Expected eof but found 0
null0
    ^
SyntaxError: Invalid JSON: <json>:1:3 Expected eof but found 0
{} 0
   ^
SyntaxError: Invalid JSON: <json>:1:3 Expected eof but found a
{} a
   ^
SyntaxError: Invalid JSON: <json>:1:3 Expected eof but found 0
[] 0
   ^
SyntaxError: Invalid JSON: <json>:1:3 Expected eof but found a
[] a
   ^
SyntaxError: Invalid JSON: <json>:1:2 Expected eof but found 0
1 0
  ^
SyntaxError: Invalid JSON: <json>:1:2 Expected eof but found a
1 a
  ^
SyntaxError: Invalid JSON: <json>:1:4 Expected , or ] but found :
["a":true]
    ^
SyntaxError: Invalid JSON: <json>:1:4 Expected : but found ,
{"a",truer}
    ^
SyntaxError: Invalid JSON: <json>:1:9 Expected , or } but found r
{"a":truer}
         ^
[1,2,3]
[9223372036854773800,9223372036854774800,9223372036854776000]
[1.1,1.2,1.3]
[1,1.2,9223372036854776000,null,true]
{"a":"string","b":1,"c":1.2,"d":9223372036854776000,"e":null,"f":true}
